--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -71,14 +71,14 @@
                     </ul>
                 </li>
                 <li><a><img src="/static/img/inventario_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
-                    Compras <span class="fa fa-chevron-down"></span></a>
+                    Egresos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/tienda/compras/new">Nueva Compra</a></li>
-                        <li><a href="/tienda/compras">Consulta de compras</a></li>
+                        <li><a href="/tienda/compras/new">Registrar egresos</a></li>
+                        <li><a href="/tienda/compras">Consultar egresos</a></li>
 {#                        <li><a href="/tienda/categoria_productos">Mantenimiento de Categoria</a></li>#}
 {#                        <li><a href="/tienda/categoria_productos/new">Categorias de productos</a></li>#}
-                        <li><a href="/tienda/productos">Mantenimiento de Productos</a></li>
-                        <li><a href="/tienda/productos/new">Existencia de productos</a></li>
+                        <li><a href="/tienda/productos/new">Registrar Productos</a></li>
+                        <li><a href="/tienda/productos">Consultar productos</a></li>
 
                     </ul>
                 </li>
