Resumen de inscripción

--- a/src/tienda/templates/ventas-form.html
+++ b/src/tienda/templates/ventas-form.html
@@ -152,7 +152,7 @@
             cambiarTexto(datos.actividad_economica, 'bloque-factura-actividad-economica');
             cambiarTexto(datos.direccion, 'bloque-factura-direccion');
             cambiarTexto(datos.telefono, 'bloque-factura-telefono');
-            cambiarTexto(datos.timbrado, 'bloque-factura-numero-timbrado');
+            cambiarTexto(datos.numero_timbrado, 'bloque-factura-numero-timbrado');
             cambiarTexto(datos.vigencia_desde, 'bloque-factura-vigencia-desde');
             cambiarTexto(datos.vigencia_hasta, 'bloque-factura-vigencia-hasta');
             cambiarTexto(datos.ruc, 'bloque-factura-ruc');
