--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -96,14 +96,21 @@
                                 </div>
 
                                 <div id="step-4" class="content" style="display: none;">
-                                    <h3>Resumen Titular</h3>
-                                    <div id="resumen-titular"></div>
-                                    <h3>Resumen Alumnos</h3>
-                                    <div id="resumen-alumno"></div>
+                                    <div style="background-color:#34495E;color:#ffffff; text-align: center"><h3>Resumen de inscripción</h3>
+                                    </div>
+
+                                    <div class="col-sm-3">
+                                        <strong style="background-color:rgba(26, 187, 156, 0.27)" >Titular</strong>
+                                    <div id="resumen-titular"  ></div>
+
+                                    </div>
+
+                                    <div id="resumen-alumno"class="col-sm-9" ></div>
 
 
                                 </div>
-                            </div>
+                                </div>
+
                         </form>
 
                     </div>
