--- a/src/main/templates/main/alumnos.html
+++ b/src/main/templates/main/alumnos.html
@@ -40,7 +40,8 @@
                                 <th>Teléfono</th>
                                 <th>Otro contacto</th>
                                 <th>Imagen</th>
-                                <th>Ficha</th>
+
+                                <th>titular</th>
                                 <th>Acción</th>
                             </tr>
                             </thead>
@@ -56,12 +57,11 @@
                                     <td>{{ alumno.telefono1 }}</td>
                                     <td>{{ alumno.telefono2 }}</td>
 
-                                    <td>{% if alumno.ficha %}
+                                    <td>{% if alumno.imagen %}
                                         <img height="100px" src="/media/{{ alumno.imagen }}">{% else %}sin
                                         foto{% endif %}</td>
-                                    <td>{% if alumno.ficha %}<a href="/media/{{ alumno.ficha }}">ficha</a>{% else %}(sin
-                                        ficha){% endif %}</td>
 
+                                    <td>{{ alumno.titular_cuenta }}</td>
                                     <td><a class="btn btn-info btn-xs" href="/alumnos/{{ alumno.id }}/update">Editar </a>
                                         <a button class="btn btn-danger btn-xs" data-toggle="modal"
                                            data-target="#eliminar-modal" onclick="formEliminar({{ alumno.id }})">Eliminar</a></td>
