--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -58,6 +58,15 @@
                         <li><a href="/escuela/asistencia/new">Registrar Asistencia</a></li>
                     </ul>
                 </li>
+                <li><a><img src="/static/img/pagos_blanco.png" width="28px" style="margin: 0.3em 0.6em 0.6em 0.6em"> Cuentas
+                    <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                        <li><a href="/cuentas">Cuentas a cobrar</a></li>
+{#                       <li><a href="#">Cuentas a Cobrar</a></li>#}
+{#                        <li><a href="#">Cuentas a Pagar</a></li>#}
+
+                    </ul>
+                </li>
 
                 <li><a><img src="/static/img/indumentaria_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ventas <span class="fa fa-chevron-down"></span></a>
@@ -70,6 +79,7 @@
 {#                        <li><a href="">Mantenimiento de Clientes</a></li>#}
                     </ul>
                 </li>
+
                 <li><a><img src="/static/img/inventario_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Egresos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
