--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -32,10 +32,12 @@
                     Alumnos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/escuela/inscripciones/new">Nueva Inscripción</a></li>
+                        <li><a href="/escuela/inscripciones">Inscripciones</a></li>
+                        <li><a href="/escuela/inscripciones/bajas">Baja de Inscripción</a></li>
                         <li><a href="/alumnos">Mantenimiento de Alumnos</a></li>
                         <li><a href="/alumnos/new">Nuevo Alumno</a></li>
                         <li><a href="/titulares">Mantenimiento de Titulares</a></li>
-                        <li><a href="/escuela/inscripciones">Inscripciones</a></li>
+
 
 
                     </ul>
@@ -61,7 +63,7 @@
                 <li><a><img src="/static/img/pagos_blanco.png" width="28px" style="margin: 0.3em 0.6em 0.6em 0.6em"> Cuentas
                     <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/cuentas">Cuentas a cobrar</a></li>
+                        <li><a href="/escuela/cuentas" >Cuentas a cobrar</a></li>
 {#                       <li><a href="#">Cuentas a Cobrar</a></li>#}
 {#                        <li><a href="#">Cuentas a Pagar</a></li>#}
 
@@ -71,10 +73,11 @@
                 <li><a><img src="/static/img/indumentaria_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ventas <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
+                        <li><a href="/tienda/ventas/new">Nueva Venta</a></li>
+                        <li><a href="/tienda/ventas">Consulta de Ventas</a></li>
                         <li><a href="/tienda/clientes/new">Nuevo Cliente</a></li>
                          <li><a href="/tienda/clientes">Mantenimiento de Clientes</a></li>
-                        <li><a href="/tienda/ventas/new">Nueva Venta</a></li>
-                        <li><a href="#">Mantenimiento de Ventas</a></li>
+
                         <li><a href="/tienda/facturas">Mantenimiento de Facturas</a></li>
 {#                        <li><a href="">Mantenimiento de Clientes</a></li>#}
                     </ul>
