--- a/src/tienda/templates/venta-detalle.html
+++ b/src/tienda/templates/venta-detalle.html
@@ -3,12 +3,11 @@
 
     <div class="page-title">
         <div class="title_left">
-            <h3>Lista de Inscripciones</h3>
+            <h3>Detalle de la factura</h3>
         </div>
         <div class="title_right">
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
 
-                    <a class="btn btn-primary pull-right" href="/escuela/inscripciones/new"><i  class="fa fa-plus-square"></i> NUEVA INSCRIPCION</a>
 
                 </div>
             </div>
@@ -25,35 +24,38 @@
 
                     <div class="x_content">
 
-                        <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap"
+                        <table class="table table-striped table-bordered dt-responsive nowrap"
                                cellspacing="0"
                                width="100%">
 
                             <thead>
-                            <tr>
-                                <th>Alumno</th>
-                                <th>Grupo</th>
-                                <th>Estado</th>
-                                <th>Inicio</th>
-                                <th>Fin</th>
 
+                            <tr>
+                                    <th>Nro de Factura</th>
+                                    <th>Cliente</th>
+                                    <th>Fecha</th>
+                                    <th>Detalle</th>
+                                    <th>Monto Total</th>
 
                             </tr>
+
                             </thead>
                             <tbody>
 
-                            {% for inscripcion in inscripciones %}
+                            {% for detalles in detalles     %}
                                 <tr>
-                                    <td>{{ inscripcion.alumno }}</td>
-                                    <td>{{ inscripcion.grupo }}</td>
-                                    <td>{{ inscripcion.estado }}</td>
-                                    <td>{{ inscripcion.fecha_inicio }}</td>
-                                    <td>{{ inscripcion.fecha_fin }}</td>
+                                    <td>{{ detalles.venta.nro_factura }}</td>
+                                    <td>{{ detalles.venta.cliente }}</td>
+                                    <td>{{ detalles.venta.fecha}}</td>
+                                    <td>{{ detalles.detalle }}</td>
+                                    <td>{{ detalles.venta.monto_total }}</td>
 
 
-{#                                    <td><a class="btn btn-info btn-xs" href="/escuela/inscripciones/{{ inscripcion.id }}/update">Editar </a>#}
+
+
+{#                                    <td><a class="btn btn-info btn-xs" href="/tienda/compras/{{ venta.id }}/update">Editar </a>#}
 {#                                        <a button class="btn btn-danger btn-xs" data-toggle="modal"#}
-{#                                           data-target="#eliminar-modal" onclick="formEliminar({{ inscripcion.id }})">Eliminar</a></td>#}
+{#                                           data-target="#eliminar-modal" onclick="formEliminar({{ venta.id }})">Eliminar</a></td>#}
                                 </tr>
                             {% endfor %}
 
@@ -79,7 +81,7 @@
                     <h4 class="modal-title" id="myModalLabel2">Confirmación</h4>
                 </div>
                 <div class="modal-body">
-                    <h4>Esta seguro que desea eliminar esta Inscripcion?</h4>
+                    <h4>Esta seguro que desea eliminar esta Factura?</h4>
 
                 </div>
                 <div class="modal-footer">
@@ -96,7 +98,7 @@
     </div>
     <script>
         function formEliminar(id){
-            $('#eliminar-form').attr('action', 'escuela/inscripciones/' + id + '/delete);
+            $('#eliminar-form').attr('action', '/tienda/compras/' + id + '/delete' );
         }
     </script>
-{% endblock %}>
+{% endblock %}
