--- a/src/tienda/templates/venta-detalle.html
+++ b/src/tienda/templates/venta-detalle.html
@@ -59,8 +59,10 @@
                                 </tr>
                             {% endfor %}
 
+
                             </tbody>
                         </table>
+                    <a class="btn btn-primary dropdown-toggle btn-md "    href="/">Salir </a>
 
 
                     </div>
